# AgentFlow

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  README_zh.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  pattern_proposal.md  pull_request_template.md
.github/workflows/: docs.yml  test.yml
agentflow/: __init__.py  utils.py
benchmarks/: SELECTION_GUIDE.md  __init__.py  run_benchmark.py  tasks.py
docs/: PATTERN_TEMPLATE.md
examples/ai_newsroom/: README.md  README_zh.md  __init__.py  newsroom.py
examples/research_team/: README.md  README_zh.md  __init__.py  team.py
patterns/: __init__.py
patterns/chain_of_experts/: README.md  README_zh.md  __init__.py  diagram.mmd  example.py  pattern.py
patterns/debate/: README.md  README_zh.md  __init__.py  diagram.mmd  example.py  pattern.py
patterns/guardrail/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/hierarchical/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/human_in_the_loop/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/map_reduce/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/rag_agent/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/reflection/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/swarm/: __init__.py  diagram.mmd  example.py  pattern.py
patterns/voting/: __init__.py  diagram.mmd  example.py  pattern.py
web/: Makefile  mkdocs.yml  requirements.txt  sync_docs.py
web/docs/: index.md
web/docs/guide/: index.md  (+2 more)
web/site/: 404.html  index.html  sitemap.xml
(+52 files in other folders)
